--- a/.gitignore
+++ b/.gitignore
@@ -159,3 +159,11 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
 .vscode
+
+# results formats
+*.csv
+*.pkl 
+*.parquet
+*.csv
+*.feather
+*.arrow
